--- a/index.html
+++ b/index.html
@@ -3,8 +3,8 @@
     <title>About Me</title>
 </head>
 <body> 
-    <a href="page2.html" target="_blank">This is a link</a>
-    <h1>Ramon Zuniga</h1>
-    <h2>Computer Science</h2>
-    <p>Fun Fact: I like to play soccer</p>
+   <h1>My Life: Ramon Zuniga</h1>
+    <h2>Fun Fact 1: I like to play Soccer</h2>
+    <p>Soccer has been apart of my journey since I was 3 years old. Its been my pride and joy. I am grateful for all that soccer has taught and given me. </p>
+
 </body>
