--- a/index.html
+++ b/index.html
@@ -4,7 +4,13 @@
 </head>
 <body> 
    <h1>My Life: Ramon Zuniga</h1>
-    <h2>Fun Fact 1: I like to play Soccer</h2>
-    <p>Soccer has been apart of my journey since I was 3 years old. Its been my pride and joy. I am grateful for all that soccer has taught and given me. </p>
+    <h2 class="Fun fact 1">Fun Fact 1: I like to play Soccer</h2>
+    <p class="Fun fact 1">Soccer has been apart of my journey since I was 3 years old. Its been my pride and joy. I am grateful for all that soccer has taught and given me. </p>
+    <a href = "//www.google.com/url?sa=i&url=https%3A%2F%2Fwww.facebook.com%2Ffabrizioromanoherewego%2Fposts%2F-cope-neymar-really-wants-to-returns-to-barcelona-in-the-summer-transfer-window-%2F1279525323974956%2F&psig=AOvVaw0rpZiinK4fR9vAyhNr8mah&ust=1758754450664000&source=images&cd=vfe&opi=89978449&ved=0CBYQjRxqFwoTCNDw4oT9748DFQAAAAAdAAAAABAE"> This is my favorite player </a>
+    <h2 class="Fun fact 2">Fun Fact 2: My major is computer science</h3>
+    <p class="Fun fact 2">As college approached I never really knew what I wanted to major in. My mom ultimately inspired me to go into this field. It had me interested in learning more. I never really tried or loked into it,  </p>
+
+
+
 
 </body>
