--- a/index.html
+++ b/index.html
@@ -4,17 +4,19 @@
 </head>
 <body> 
    <h1>My Life: Ramon Zuniga</h1>
-    <h2 class="Funfact1">Fun Fact 1: I like to play Soccer</h2>
-    <p class="Funfact1">Soccer has been apart of my journey since I was 3 years old. Its been my pride and joy. I am grateful for all that soccer has taught and given me. Hopefully one day I could give back to soccer by maybe teaching my kid or being a coach or something. But til then I will focus on my career and make the best of it.</p>
+    <h2 class="title">Fun Fact 1: I like to play Soccer</h2>
+    <p class="message">Soccer has been apart of my journey since I was 3 years old. Its been my pride and joy. I am grateful for all that soccer has taught and given me. Hopefully one day I could give back to soccer by maybe teaching my kid or being a coach or something. But til then I will focus on my career and make the best of it.</p>
     <a href = "https://youtu.be/K2csY1cMpfA?si=ZKcYH0IT-8ppoOjC"> This is my favorite player </a>
-    
-    <h2 class="Funfact2">Fun Fact 2: My major is computer science</h2>
-    <p class="Funfact2">As college approached I never really knew what I wanted to major in. My mom ultimately inspired me to go into this field. It had me interested in learning more. I never really tried or looked into it. I am excited to see what I learn and get out of computer science.  </p>
+   
+    <img src="images/9515BEEA-2958-42AB-B7E3-674F946A0C56.JPG" alt="This is me">
 
+    <h2 class="title">Fun Fact 2: My major is Computer Science</h2>
+    <p class="message">As college approached I never really knew what I wanted to major in. My mom ultimately inspired me to go into this field. It had me interested in learning more. I never really tried or looked into it. I am excited to see what I learn and get out of computer science.  </p>
+    
 
 
 </body>
 <body>
-    <h2 class="Funfact3"> Fun Fact 3: I have never owned a pet</h2>
-    <p class="Funfact3"> Ever since I was a kid seeing many different kids with a pet ranging from hamsters to dogs. I have always wanted once but my parents answer was always no. I never got the chnace to experience what it was like with a pet. My life was choatic as it was but I think a pet would had been a fun addition.</p>
+    <h2 class="title"> Fun Fact 3: I have never owned a pet</h2>
+    <p class="message"> Ever since I was a kid seeing many different kids with a pet ranging from hamsters to dogs. I have always wanted once but my parents answer was always no. I never got the chnace to experience what it was like with a pet. My life was choatic as it was but I think a pet would had been a fun addition.</p>
 </body>
