--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
 </head>
 <body> 
    <h1>Will you be my valentine?</h1>
-    <a href = "https://stablediffusionweb.com/image/8121837-minion-s-big-bouquet-of-roses"> </a>
+    <img src = "minion.jpg" alt = "Minion holding flowers">
    
     
 
